--- a/telemarketing_predictive_analytics.ipynb
+++ b/telemarketing_predictive_analytics.ipynb
@@ -3370,7 +3370,7 @@
     "\n",
     "The data preparation stage is necessary for several reasons:\n",
     "1. **Feature-Target Separation**: By separating the features and target variable, we can train the model to predict 'deposit' based on the values in `X`.\n",
-    "2. **Data Preprocessing**: It allows for easier preprocessing of the features (e.g., scaling, encoding, handling missing values) before training the model.\n",
+    "2. **Data Preprocessing**: It allows for easier preprocessing of the features (e.g., scaling and encoding) before training the model.\n",
     "3. **Model Training**: It ensures that the model only learns from the input data (features) and not the target variable, preventing data leakage and improving the model's generalization capabilities.\n",
     "\n",
     "This step is a fundamental part of the workflow to prepare the data for further modeling and analysis."
@@ -4345,7 +4345,7 @@
     "id": "NxSva1t9-TGC"
    },
    "source": [
-    "Logistic regression has several hyperparameters that can be tuned to improve the model's performance. In this project, we performed hyperparameter tuning using **GridSearchCV** to find the best combination of hyperparameters. The key hyperparameters for logistic regression are as follows:\n",
+    "Logistic regression has several hyperparameters that can be tuned to improve the model's performance. Hyperparameter tuning performed using **GridSearchCV** to find the best combination of hyperparameters. The key hyperparameters for logistic regression are as follows:\n",
     "\n",
     "1. **C** (Regularization Strength):\n",
     "   - **Definition**: C is the inverse of regularization strength. Smaller values of C correspond to stronger regularization.\n",
@@ -4566,12 +4566,6 @@
     "\n",
     "#### **1. Recall Calculation**\n",
     "\n",
-    "- Recall is defined as:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\text{Recall} = \\frac{TP}{TP + FN}\n",
-    "\\end{align}\n",
-    "\n",
     "- **Without Model**\n",
     "\n",
     "    Since all 915 positive clients (clients who will deposit) are identified as True Positives (TP) and no False Negatives (FN) are present, the recall without the model is:\n",
@@ -4582,11 +4576,7 @@
     "\n",
     "- **With Model**\n",
     "\n",
-    "    The recall with the model is calculated as:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\text{Recall with model} = \\frac{656}{656 + 259} = \\frac{656}{915} \\approx 0.7169\n",
-    "\\end{align}\n",
+    "    The recall with the model is $0.7169$ as calculated before.\n",
     "\n",
     "#### **2. Cost Savings**\n",
     "\n",
