--- a/telemarketing_predictive_analytics.ipynb
+++ b/telemarketing_predictive_analytics.ipynb
@@ -80,7 +80,7 @@
     "This project utilizes the **Bank Marketing Campaigns Dataset** [[5]](https://www.kaggle.com/datasets/volodymyrgavrysh/bank-marketing-campaigns-dataset), which captures the results of marketing campaigns conducted by a bank in Portugal. These campaigns primarily involved direct phone calls to clients, promoting term deposit subscriptions. The target, **`y`**, indicates whether a client subscribed to a term deposit (\"yes\" or \"no\").\n",
     "\n",
     "### **Dataset Features**  \n",
-    "The dataset contains 21 features categorized into different types based on their relevance:\n",
+    "The dataset contains 41,176 obsertvations 21 features categorized into different types based on their relevance:\n",
     "\n",
     "1. **Bank Client Data**:\n",
     "   - **`age`**: Age of the client (numeric).\n",
@@ -738,7 +738,7 @@
     "id": "PcjG4nYczNCF"
    },
    "source": [
-    "The visualization reveals a significant imbalance in the dataset, with 88.3% of clients not making a deposit, compared to only 11.7% who did. This suggests that the majority of clients in the dataset did not engage in the desired action, which may influence model training, potentially leading to a bias towards predicting 'no deposit.' This distribution should be considered when building and evaluating predictive models to account for the class imbalance. Further, exploratory data analysis will be performed to numerical and categorical features."
+    "The visualization reveals a significant imbalance in the dataset, with 36,536 (88.3%) of clients not making a deposit, compared to only 4,640 (11.7%) who did. This suggests that the majority of clients in the dataset did not engage in the desired action, which may influence model training, potentially leading to a bias towards predicting 'no deposit.' This distribution should be considered when building and evaluating predictive models to account for the class imbalance. Further, exploratory data analysis will be performed to numerical and categorical features."
    ]
   },
   {
