--- a/telemarketing_predictive_analytics.ipynb
+++ b/telemarketing_predictive_analytics.ipynb
@@ -4545,10 +4545,7 @@
     "**Hyperparameter tuning** is performed using **GridSearchCV** to optimize the Logistic Regression model for the recall metric.\n",
     "\n",
     "1. **Define the Parameter Grid**\n",
-    "   - A dictionary `param_grid` is created to define the hyperparameters to be tuned:\n",
-    "     - **C**: The regularization strength. A smaller value indicates stronger regularization.\n",
-    "     - **penalty**: Specifies the regularization method. `'l1'` is Lasso regularization (L1), and `'l2'` is Ridge regularization (L2).\n",
-    "     - **solver**: The optimization algorithm to be used. `'liblinear'` is suitable for small datasets, and `'saga'` is more efficient for larger datasets.\n",
+    "   - A dictionary `param_grid` is created to define the hyperparameters to be tuned.\n",
     "\n",
     "2. **Create a Logistic Regression Model**\n",
     "   - A Logistic Regression model is initialized with `class_weight='balanced'` to handle class imbalance, and `random_state=42` for reproducibility.\n",
@@ -4563,13 +4560,9 @@
     "\n",
     "4. **Fit GridSearchCV**\n",
     "   - The `fit` method is called to search over the hyperparameter grid and find the best combination based on recall score.\n",
-    "\n",
-    "5. **Output Best Hyperparameters and Score**\n",
-    "   - The best hyperparameters (`best_params_`) and the best cross-validation recall score (`best_score_`) are printed.\n",
     "   \n",
     "6. **Evaluate the Best Model on the Test Set**\n",
     "   - The best model found through GridSearchCV (`best_lr`) is used to predict the target values for the test set.\n",
-    "   - The recall score on the test set is calculated and printed.\n",
     "\n",
     "**Output Interpretation**\n",
     "- **Best hyperparameters**: `{'C': 0.001, 'penalty': 'l1', 'solver': 'liblinear'}`: The best combination of hyperparameters for optimizing recall.\n",
@@ -4693,13 +4686,17 @@
     "\n",
     "#### **2. Cost Savings**\n",
     "\n",
-    "- **Without the model**, the telemarketing campaign would make calls to all 7859 clients. The cost per call is €5, so the total cost of calling all clients is:\n",
+    "- **Without the Model**\n",
+    "\n",
+    "    The telemarketing campaign would make calls to all 7859 clients. The cost per call is €5, so the total cost of calling all clients is:\n",
     "\n",
     "\\begin{align}\n",
     "\\text{Total cost without model} = 7859 \\times 5 = €39,295\n",
     "\\end{align}\n",
     "\n",
-    "- **With the model**, the calls are more targeted. Only clients predicted to make a deposit (TP + FP) are called. Therefore, the number of calls made would be:\n",
+    "- **With the Model**\n",
+    "\n",
+    "    The calls are more targeted. Only clients predicted to make a deposit (TP + FP) are called. Therefore, the number of calls made would be:\n",
     "\n",
     "\\begin{align}\n",
     "\\text{Number of calls with model} = 656 (\\text{TP}) + 1953 (\\text{FP}) = 2609\n",
@@ -4722,14 +4719,16 @@
     "Each successful deposit is worth €62.50 annually. The total revenue from successful deposits can be calculated as:\n",
     "\n",
     "- **Without Model**\n",
-    "Since all 915 positive clients are contacted, the revenue generated from successful deposits is:\n",
+    "\n",
+    "    Since all 915 positive clients are contacted, the revenue generated from successful deposits is:\n",
     "\n",
     "\\begin{align}\n",
     "\\text{Revenue without model} = 915 \\times 62.5 = €57,187.50\n",
     "\\end{align}\n",
     "\n",
     "- **With Model**\n",
-    "The model identifies 656 True Positives who are predicted to make a deposit. Therefore, the revenue generated with the model is:\n",
+    "\n",
+    "    The model identifies 656 True Positives who are predicted to make a deposit. Therefore, the revenue generated with the model is:\n",
     "\n",
     "\\begin{align}\n",
     "\\text{Revenue with model} = 656 \\times 62.5 = €41,000\n",
@@ -4746,7 +4745,7 @@
     "- **Cost Savings**: €26,250 (from reducing the number of calls made)\n",
     "- **Revenue Gain**: -€16,187.50 (due to fewer positive clients being identified by the model)\n",
     "\n",
-    "#### **5.Conclusion**\n",
+    "#### **5. Conclusion**\n",
     "\n",
     "- **Using the Model** saves **€26,250** in telemarketing costs.\n",
     "- **However**, the model results in a **revenue loss** of **€16,187.50** due to fewer positive clients being identified (due to False Negatives).\n",
