--- a/bank_telemarketing_predictive_analytics.ipynb
+++ b/bank_telemarketing_predictive_analytics.ipynb
@@ -6,7 +6,7 @@
         "id": "3rB0WiieWQG6"
       },
       "source": [
-        "# **Telemarketing Predictive Analytics**"
+        "# **Bank Telemarketing Predictive Analytics**"
       ]
     },
     {
